Restructure the repository

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,26 @@
-# Ballerina generates this directory during the compilation of a package.
-# It contains compiler-generated artifacts and the final executable if this is an application package.
-target/
-
-# Ballerina maintains the compiler-generated source code here.
-# Remove this if you want to commit generated sources.
-generated/
-
-# Contains configuration values used during development time.
-# See https://ballerina.io/learn/provide-values-to-configurable-variables/ for more details.
-Config.toml
-
-*.env
+# IDE and OS
 .vscode/
-
+.idea/
 .DS_Store
 
+# Environment files
+*.env
+
+# Working directory (local scratch files)
 wd/
+
+# Ballerina build artifacts
+**/target/
+**/generated/
+
+# Ballerina config (contains local dev values)
+**/Config.toml
+
+# Python
+__pycache__/
+*.py[cod]
+.venv/
+venv/
+
+# Node
+node_modules/
