--- a/.github/workflows/release-common.yml
+++ b/.github/workflows/release-common.yml
@@ -143,6 +143,7 @@ jobs:
         with:
           context: ${{ inputs.implementation }}
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.docker-tags.outputs.TAGS }}
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
