--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,8 +49,8 @@ jobs:
         env:
           IMPLEMENTATION: ${{ inputs.implementation }}
         run: |
-          # Read version from Ballerina.toml
-          RELEASE_VERSION=$(grep '^version = ' "$IMPLEMENTATION/Ballerina.toml" | sed 's/version = "\(.*\)"/\1/')
+          # Read version from Ballerina.toml (first match is package version)
+          RELEASE_VERSION=$(grep '^version = ' "$IMPLEMENTATION/Ballerina.toml" | head -1 | sed 's/version = "\(.*\)"/\1/')
 
           # Validate version format
           if [[ ! "$RELEASE_VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
