--- a/langchain-interpreter/pyproject.toml
+++ b/langchain-interpreter/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
     "langchain-openai>=1.1.7",
     "langchain-anthropic>=1.3.1",
     "jsonschema>=4.26.0",
+    "fastapi>=0.128.1",
+    "httpx>=0.28.1",
+    "uvicorn>=0.40.0",
 ]
 
 [project.scripts]
