--- a/langchain-interpreter/pyproject.toml
+++ b/langchain-interpreter/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "fastapi>=0.128.1",
     "httpx>=0.28.1",
     "uvicorn>=0.40.0",
+    "mcp>=1.26.0",
+    "langchain-mcp-adapters>=0.2.1",
 ]
 
 [project.scripts]
