--- a/langchain-interpreter/pyproject.toml
+++ b/langchain-interpreter/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "mcp>=1.26.0",
     "langchain-mcp-adapters>=0.2.1",
     "click>=8.0.0",
+    "textual>=2.1.0",
 ]
 
 [project.scripts]
@@ -41,4 +42,5 @@ dev = [
     "pytest>=8.0",
     "pytest-cov>=7.0.0",
     "pytest-asyncio>=1.3.0",
+    "textual-dev>=1.7.0",
 ]
