--- a/langchain-interpreter/pyproject.toml
+++ b/langchain-interpreter/pyproject.toml
@@ -1,15 +1,14 @@
 [project]
 name = "afm-cli"
-version = "0.1.0"
+version = "0.1.1"
 description = "AFM (Agent-Flavored Markdown) interpreter using LangChain"
 readme = "README.md"
-authors = [{ name = "Radith Samarakoon", email = "jjeli1234@gmail.com" }]
+authors = [{ name = "Radith Samarakoon" }]
 classifiers = [
     "Development Status :: 3 - Alpha",
-    "Intended Audience :: Developers",
-    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3.11",
 ]
+license = "Apache-2.0"
 requires-python = ">=3.11"
 urls = { Repository = "https://github.com/RadCod3/reference-implementations-afm" }
 dependencies = [
