--- a/.github/workflows/langchain-interpreter.yml
+++ b/.github/workflows/langchain-interpreter.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Run tests
         run: uv run pytest
 
+      - name: Check formatting
+        run: uv run ruff format --check .
+
       - name: Lint with ruff
         run: uv run ruff check .
 
