--- a/langchain-interpreter/packages/afm-cli/pyproject.toml
+++ b/langchain-interpreter/packages/afm-cli/pyproject.toml
@@ -11,7 +11,7 @@ license = "Apache-2.0"
 requires-python = ">=3.11"
 urls = { Repository = "https://github.com/wso2/reference-implementations-afm" }
 dependencies = [
-    "afm-core",
+    "afm-core==0.1.0",
     "afm-langchain",
 ]
 
