--- a/langchain-interpreter/packages/afm-core/pyproject.toml
+++ b/langchain-interpreter/packages/afm-core/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "fastapi>=0.128.1",
     "httpx>=0.28.1",
     "uvicorn>=0.40.0",
+    "platformdirs>=4.0",
+    "packaging>=24.0",
 ]
 
 [project.scripts]
