--- a/langchain-interpreter/packages/afm-core/pyproject.toml
+++ b/langchain-interpreter/packages/afm-core/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "uvicorn>=0.40.0",
     "platformdirs>=4.0",
     "packaging>=24.0",
+    "rich>=14.3.2",
 ]
 
 [project.scripts]
