Refactor update notification logic
- Handle scenarios wehre only afm-core is installed
- Notify every time instead of one time as other applications do

--- a/python-interpreter/Dockerfile
+++ b/python-interpreter/Dockerfile
@@ -39,6 +39,10 @@ COPY --from=builder /app/.venv /app/.venv
 # Set environment variables
 ENV PATH="/app/.venv/bin:$PATH"
 ENV PYTHONUNBUFFERED=1
+# Signal to the AFM update checker that it's running inside a container.
+# This suppresses package-manager upgrade commands in update notifications
+# since users should update by rebuilding or pulling the container image.
+ENV AFM_RUNTIME=docker
 
 # Expose default port for web interfaces
 EXPOSE 8000
