Disable bump version step in release workflows
Due to branch protection rules, the current version nump step in both
ballerina and python release workflows fail. Disabled them for now. If a
contributor forgets to bump the version the validate step will still
fail.

--- a/.github/workflows/release-ballerina.yml
+++ b/.github/workflows/release-ballerina.yml
@@ -139,6 +139,7 @@ jobs:
 
   bump-version:
     needs: [validate, finalize]
+    if: false  # Disabled: direct push blocked by branch protection
     runs-on: ubuntu-latest
     permissions:
       contents: write
